<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/title_string"
        android:textSize="24sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <Button
                style="@style/MainButtons"
                android:onClick="spotifyClick"
                android:text="@string/spotify_button" />

            <Button
                style="@style/MainButtons"
                android:onClick="scoresClick"
                android:text="@string/scores_button" />

            <Button
                style="@style/MainButtons"
                android:onClick="libraryClick"
                android:text="@string/library_button" />

            <Button
                style="@style/MainButtons"
                android:onClick="biggerClick"
                android:text="@string/build_it_bigger_button" />

            <Button
                style="@style/MainButtons"
                android:onClick="readerClick"
                android:text="@string/xyz_reader_button" />

            <Button
                style="@style/MainButtons"
                android:onClick="capstoneClick"
                android:text="@string/capstone_button" />


    </LinearLayout>
    </ScrollView>

</LinearLayout>
